WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97593
Regression: put beyond vector length prefers prototype setters to sparse properties
https://bugs.webkit.org/show_bug.cgi?id=97593
Summary
Regression: put beyond vector length prefers prototype setters to sparse prop...
Gavin Barraclough
Reported
2012-09-25 12:11:39 PDT
example in patch.
Attachments
Fix
(3.36 KB, patch)
2012-09-25 12:14 PDT
,
Gavin Barraclough
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2012-09-25 12:14:24 PDT
Created
attachment 165651
[details]
Fix
Geoffrey Garen
Comment 2
2012-09-25 13:01:20 PDT
Comment on
attachment 165651
[details]
Fix r=me and Phil
Gavin Barraclough
Comment 3
2012-09-25 13:17:52 PDT
Fixed in
r129548
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug